@startuml

title __MAZEGENERATORFX's Class Diagram__\n

  package Generator {
    class ApplicationUtils {
    }
  }
  

  package Generator {
    class Cell {
    }
  }
  

  package Generator {
    package Generator.Controllers {
      class CellLayoutController {
      }
    }
  }
  

  package Generator {
    class JsonStructures {
    }
  }
  

  package Generator {
    package Generator.Controllers {
      class LaunchController {
      }
    }
  }
  

  package Generator {
    class Main {
    }
  }
  

  package Generator {
    class MazeGen {
    }
  }
  

  package Generator {
    package Generator.Controllers {
      class StimulusSelectionController {
      }
    }
  }
  

  Cell o-- StimulusType : stimulusType
  CellLayoutController -up-|> Initializable
  LaunchController -up-|> Initializable
  Main -up-|> Application
  MazeGen -up-|> PApplet
  MazeGen o-- Cell : current
  StimulusSelectionController -up-|> Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
